<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sandwich Shop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_title">Customize your sandwich</string>
    <string name="text_view_radio_button_wheat">Wheat</string>
    <string name="text_view_radio_button_white">White</string>
    <string name="text_view_radio_button_rye">Rye</string>
    <string name="check_box_hearty_italian">Hearty Italian</string>
    <string name="check_box_jalapeno_cheese">Jalapeno Chesse</string>
    <string name="check_box_cheddar">Cheddar</string>
    <string name="check_box_oregano">Oregano</string>
    <string name="check_box_roasted_garlic">Roasted Garlic</string>
    <string name="check_box_mozzarella">Mozarella</string>
    <string name="check_box_spinach">Spinach</string>
    <string name="check_box_tomatoes">Tomatoes</string>
    <string name="button_place_order">Place order</string>
    <string name="text_view_label_confirm">Confirm your order:</string>
    <string name="text_view_order_description" />
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_view_order_confirmed">Your order has been confirmed.</string>
    <string name="button_ok">OK</string>
    <string name="text_view_label_orders_count">Sandwich orders total:</string>
    <string name="text_view_count_orders" />
    <string name="edit_text_sandwich_count" />
    <string name="edit_text_view_hint">Number of orders</string>

</resources>
