<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <include layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_view_title"
            android:id="@+id/textView"
            android:layout_weight="0.03"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="35dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="102dp"
            android:weightSum="1">

            <RadioGroup
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:id="@+id/radio_group_bread"
                android:layout_weight="0.00">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_radio_button_wheat"
                    android:id="@+id/text_view_radio_button_wheat" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_radio_button_white"
                    android:id="@+id/text_view_radio_button_white" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_radio_button_rye"
                    android:id="@+id/text_view_radio_button_rye" />
            </RadioGroup>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_label_orders_count"
                    android:id="@+id/text_view_label_orders_count"
                    android:layout_weight="0.18" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_sandwich_count"
                    android:text="@string/edit_text_sandwich_count"
                    android:hint="@string/edit_text_view_hint" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_weight="0.06">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_hearty_italian"
                    android:id="@+id/check_box_hearty_italian"
                    android:layout_gravity="center_horizontal"
                    android:paddingRight="50dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_roasted_garlic"
                    android:id="@+id/check_box_roasted_garlic"
                    android:layout_gravity="top" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_jalapeno_cheese"
                    android:id="@+id/check_box_jalapeno_cheese"
                    android:paddingRight="10dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_mozzarella"
                    android:id="@+id/check_box_mozzarella" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_cheddar"
                    android:id="@+id/check_box_cheddar"
                    android:paddingRight="65dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_spinach"
                    android:id="@+id/check_box_spinach" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_oregano"
                    android:id="@+id/check_box_oregano"
                    android:paddingRight="65dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_tomatoes"
                    android:id="@+id/check_box_tomatoes" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_place_order"
                android:id="@+id/button_place_order"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.00" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="New Text"
                android:id="@+id/counter_sandwiches"
                android:layout_gravity="right"
                android:gravity="center_vertical|right" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
